--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 joblib==1.4.2
-Mako==1.3.10.dev0
+Mako==1.3.10
 Markdown==3.5.2
 MarkupSafe==3.0.2
 meson==1.5.2
